--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/thallesBueno/books#readme",
   "devDependencies": {
     "@types/express": "^4.17.15",
+    "@types/morgan": "^1.9.4",
     "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
@@ -32,6 +33,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "morgan": "^1.10.0",
     "winston": "^3.8.2"
   }
 }
