--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,24 @@
 {
+    "settings": {
+        "import/resolver": {
+        "node": {
+            "extensions": [".js",".ts"]
+        }
+        }
+    },
     "env": {
         "es2021": true,
         "node": true
     },
     "extends": [
-        "airbnb-base"
+        "airbnb-base",
+        "airbnb-typescript/base"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": 12,
-        "sourceType": "module"
+        "sourceType": "module",
+        "project": "./tsconfig.json"
     },
     "plugins": [
         "@typescript-eslint"
