--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
+    "start": "node build/index.js",
     "dev": "npx nodemon",
+    "build": "tsc",
     "lint": "eslint --ext js,ts src/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
